# s3-browser

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  docker-compose.test.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
appimage/AppDir/: .DirIcon  AppRun
appimage/AppDir/usr/share/applications/: s3-browser.desktop
docker/: Dockerfile.build
e2e/: app-launch.e2e.ts  electron-fixtures.ts  file-navigation.e2e.ts  file-operations.e2e.ts  file-viewers.e2e.ts  folder-interactions.e2e.ts  global-setup.ts  global-teardown.ts  profile-bucket.e2e.ts  ui-features.e2e.ts
e2e/fixtures/: localstack-setup.ts
scripts/: build-all.sh  build-appimage.sh  build-macos.sh  build-windows.sh
src/: app.rs  lib.rs  main.rs  settings.rs
src/__tests__/: App.test.tsx  AwsProfileContext.test.tsx  BucketTree.test.tsx  CsvViewer.test.tsx  DeleteConfirmDialog.test.tsx  ErrorBoundary.test.tsx  FileList.test.tsx  FileListControls.test.tsx  FileToolbar.test.tsx  ImagePreview.test.tsx  JsonViewer.test.tsx  NavigationBar.test.tsx  NetworkStatusBanner.test.tsx  NewItemDialog.test.tsx  ParquetViewer.test.tsx  PropertiesDialog.test.tsx  TextEditor.test.tsx  Toast.test.tsx  YamlViewer.test.tsx  appState.test.ts  awsCredentials.test.ts  e2e-ui-flow.test.ts  editor-integration.test.ts  errorMessages.test.ts  gzipUtils.test.ts  mainProcess.test.ts  s3.integration.test.ts  s3Service.mock.test.ts  s3Service.test.ts  setup.ts  useFileOperations.test.ts  useNetworkStatus.test.ts
src/main/: index.ts
src/main/ipc/: appState.ts  credentials.ts  s3.ts
src/main/services/: appState.ts  awsCredentials.ts  gzipUtils.ts  s3Service.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.html  main.tsx
src/renderer/components/: BucketTree.tsx  CsvViewer.tsx  DeleteConfirmDialog.tsx  ErrorBoundary.tsx  FileList.tsx  FileListControls.tsx  FileToolbar.tsx  ImagePreview.tsx  JsonViewer.tsx  NavigationBar.tsx  NetworkStatusBanner.tsx  NewItemDialog.tsx  OperationStatus.tsx  ParquetViewer.tsx  ProfileSelector.tsx  PropertiesDialog.tsx  RenameDialog.tsx  StatusBar.test.tsx  StatusBar.tsx  TextEditor.tsx  Toast.tsx  YamlViewer.tsx
src/renderer/context/: AwsProfileContext.tsx
src/renderer/hooks/: useAwsProfiles.ts  useFileOperations.ts  useNetworkStatus.ts  useS3.ts
src/renderer/styles/: global.css
src/renderer/utils/: errorMessages.ts
src/s3/: client.rs  credentials.rs  mod.rs  types.rs
src/ui/: mod.rs
src/ui/components/: mod.rs
src/viewers/: csv.rs  image.rs  json.rs  mod.rs  parquet.rs  text.rs
tests/: s3_integration.rs
ui/: explorer.slint  file_list.slint  main.slint
ui/dialogs/: csv_viewer.slint  image_viewer.slint  json_viewer.slint  parquet_viewer.slint  text_editor.slint
