[package]
name = "s3-browser"
version = "2.0.0"
edition = "2021"
authors = ["Nikolai Orlov"]
description = "A lightweight, cross-platform desktop application for viewing and managing files in AWS S3 buckets"
repository = "https://github.com/n-orlov/s3-browser"
license = "MIT"

[dependencies]
# UI Framework
slint = "1.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# AWS SDK
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-sdk-sts = "1"

# Data formats
parquet = "54"
arrow = "54"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Settings storage
directories = "5"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing
url = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Clipboard
copypasta = "0.10"

# Image handling
image = "0.25"

# Webview for Monaco editor (optional - requires GTK/WebKit libs)
# wry = { version = "0.47", optional = true }

[features]
default = []
webview = []  # Enable when GTK/WebKit available for Monaco editor modal

[build-dependencies]
slint-build = "1.9"

[profile.release]
opt-level = 3
lto = true
strip = true

[[bin]]
name = "s3-browser"
path = "src/main.rs"
