[package]
name = "s3-browser"
version = "2.0.0"
edition = "2021"
authors = ["Nikolai Orlov"]
description = "A lightweight, cross-platform desktop application for viewing and managing files in AWS S3 buckets"
repository = "https://github.com/n-orlov/s3-browser"
license = "MIT"

[dependencies]
# UI Framework
slint = "1.9"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-compat = "0.2"

# AWS SDK
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-sdk-sts = "1"

# Data formats
parquet = "54"
arrow = "54"
bytes = "1"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Settings storage
directories = "5"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing
url = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Clipboard
copypasta = "0.10"

# Image handling
image = "0.25"

# File dialogs
rfd = "0.15"

# System directories (Downloads, etc.)
dirs = "5"

# Webview for Monaco editor (optional - requires GTK/WebKit libs)
# wry = { version = "0.47", optional = true }

[features]
default = []
webview = []  # Enable when GTK/WebKit available for Monaco editor modal

[dev-dependencies]
tempfile = "3"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["minio"] }

[build-dependencies]
slint-build = "1.9"

[profile.release]
opt-level = 3
lto = true
strip = true

[lib]
name = "s3_browser"
path = "src/lib.rs"

[[bin]]
name = "s3-browser"
path = "src/main.rs"

# Coverage configuration
# Run: cargo llvm-cov --ignore-filename-regex "(main\.rs|app\.rs|text\.rs)"
# Excluded files:
# - main.rs: Entry point, not unit testable
# - app.rs: Slint UI integration, requires runtime
# - text.rs: Placeholder for webview editor (task 011)

[alias]
# Quick alias would be: cargo coverage
# But aliases need to be in .cargo/config.toml
